# missing-license

./: README.md  app.py  config.env.py  config.sample.py  requirements.txt  setup.cfg
Missing-License/: .pythong  setup.py
Missing-License/Missing-License/: __init__.py
Missing-License/Missing_License/: __init__.py
missing_license/: __init__.py
missing_license/templates/: index.html
