[metadata]
name = missing_license
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = Let GitHub users know if their projects are missing a license.
url = "https://github.com/liam-middlebrook/missing-license"
description-file = README.md
license = GPLv3+
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
keywords =
    license
    licensing
    python
    github
[files]
packages =
    missing_license
[entry_points]
console_scripts =
    missing-license = missing_license:create_issue
